fixing gaps

--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -242,3 +242,6 @@
         white-space: nowrap;
     }
 }
+.queen{
+    margin-bottom: -4px;
+}
